--- a/bs/project/css/project.css
+++ b/bs/project/css/project.css
@@ -2,6 +2,13 @@
 	max-width: 1100px;
     margin: 0 auto;
 }
+.project:before, .project:after{
+    content: " ";
+    display: table;
+}
+.project:after{
+    clear: both;
+}
 .project-list{
 	width: 900px;
     padding-right: 27px;
